--- a/box-sizing.html
+++ b/box-sizing.html
@@ -6,25 +6,39 @@
     <title>Box Sizing</title>
 
     <style>
-      .content {
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      /* Ortak ozelikleri barindan class */
+      .box {
         width: 200px;
         border: 5px solid red;
         padding: 10px;
+        background-color: antiquewhite;
+      }
+
+      /* Farkliliklari iceren class'lar */
+      .content {
         box-sizing: content-box;
       }
 
       .border {
-        width: 200px;
-        border: 5px solid red;
-        padding: 10px;
         box-sizing: border-box;
+        background-color: blueviolet;
+      }
+
+      .center {
+        text-align: center;
       }
     </style>
   </head>
   <body>
     <h1>Box Sizing</h1>
 
-    <div class="content">content-box</div>
-    <div class="border">border-box</div>
+    <div class="content box center">content-box</div>
+    <div class="border box center">border-box</div>
   </body>
 </html>
