--- a/text.html
+++ b/text.html
@@ -6,14 +6,30 @@
     <title>Text Style</title>
     <link rel="stylesheet" href="text.css" />
   </head>
-  <body>
+  <body id="my-body">
     <h1>Text Style</h1>
 
     <p class="text-style">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae culpa
       adipisci fugit est sint eaque non corporis quos error consequatur,
-      assumenda deleniti a minima sunt doloremque reprehenderit pariatur
+      assumenda deleniti a minima <span>Illo</span> provident temporapariatur
       suscipit eum!
     </p>
+
+    <span
+      >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Hic unde, minus
+      consequatur minima dignissimos veritatis voluptatem laudantium nostrum id
+      commodi optio dicta enim dolorem natus doloribus perspiciatis facilis.
+      Deleniti, vero .</span
+    >
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipiscing elit. Quas doloribus
+      quam magni ex debitis recusandae
+      <span class="decoration">beatae</span> qui sed porro
+      porro pariatur similique, nostrum non officiis
+      hic corrupti facilis earum ducimus illo.
+    </p>
+    
   </body>
 </html>
