--- a/text.html
+++ b/text.html
@@ -26,10 +26,19 @@
     <p>
       Lorem ipsum dolor sit amet consectetur adipiscing elit. Quas doloribus
       quam magni ex debitis recusandae
-      <span class="decoration">beatae</span> qui sed porro
-      porro pariatur similique, nostrum non officiis
-      hic corrupti facilis earum ducimus illo.
+      <span class="decoration">beatae</span> qui sed porro porro pariatur
+      similique, nostrum non officiis hic corrupti facilis earum ducimus illo.
     </p>
-    
+
+    <p class="transformation">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis
+      laudantium quas minus odio facere soluta, labore eum hic et atque commodi
+      laboriosam quod nemo at veniam velit nam assumenda aliquam?
+    </p>
+
+    <p class="spacing">
+      Lorem ipsum dolor sit amet consectetur adipiscing elit. Minima iusto
+      reprehenderit tenetur nobis eius quod consequuntur ad ea est. Voluptatum!
+    </p>
   </body>
 </html>
