--- a/text.html
+++ b/text.html
@@ -9,36 +9,39 @@
   <body id="my-body">
     <h1>Text Style</h1>
 
-    <p class="text-style">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae culpa
-      adipisci fugit est sint eaque non corporis quos error consequatur,
-      assumenda deleniti a minima <span>Illo</span> provident temporapariatur
-      suscipit eum!
-    </p>
+    <div class="indent">
+      <p class="text-style">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+        culpa adipisci fugit est sint eaque non corporis quos error consequatur,
+        assumenda deleniti a minima <span>Illo</span> provident temporapariatur
+        suscipit eum!
+      </p>
 
-    <span
-      >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Hic unde, minus
-      consequatur minima dignissimos veritatis voluptatem laudantium nostrum id
-      commodi optio dicta enim dolorem natus doloribus perspiciatis facilis.
-      Deleniti, vero .</span
-    >
+      <span
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Hic unde,
+        minus consequatur minima dignissimos veritatis voluptatem laudantium
+        nostrum id commodi optio dicta enim dolorem natus doloribus perspiciatis
+        facilis. Deleniti, vero .</span
+      >
 
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipiscing elit. Quas doloribus
-      quam magni ex debitis recusandae
-      <span class="decoration">beatae</span> qui sed porro porro pariatur
-      similique, nostrum non officiis hic corrupti facilis earum ducimus illo.
-    </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit. Quas doloribus
+        quam magni ex debitis recusandae
+        <span class="decoration">beatae</span> qui sed porro porro pariatur
+        similique, nostrum non officiis hic corrupti facilis earum ducimus illo.
+      </p>
 
-    <p class="transformation">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis
-      laudantium quas minus odio facere soluta, labore eum hic et atque commodi
-      laboriosam quod nemo at veniam velit nam assumenda aliquam?
-    </p>
+      <p class="transformation indent">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis
+        laudantium quas minus odio facere soluta, labore eum hic et atque
+        commodi laboriosam quod nemo at veniam velit nam assumenda aliquam?
+      </p>
 
-    <p class="spacing">
-      Lorem ipsum dolor sit amet consectetur adipiscing elit. Minima iusto
-      reprehenderit tenetur nobis eius quod consequuntur ad ea est. Voluptatum!
-    </p>
+      <p class="spacing indent">
+        Lorem ipsum dolor sit amet consectetur adipiscing elit. Minima iusto
+        reprehenderit tenetur nobis eius quod consequuntur ad ea est.
+        Voluptatum!
+      </p>
+    </div>
   </body>
 </html>
