--- a/text.html
+++ b/text.html
@@ -31,6 +31,10 @@
         similique, nostrum non officiis hic corrupti facilis earum ducimus illo.
       </p>
 
+      <div class="box-shadow">
+        <h1 class="text-shadow">Text Shadow</h1>
+      </div>
+
       <p class="transformation indent">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis
         laudantium quas minus odio facere soluta, labore eum hic et atque
@@ -42,6 +46,11 @@
         reprehenderit tenetur nobis eius quod consequuntur ad ea est.
         Voluptatum!
       </p>
+    </div>
+
+    <div class="direct">
+      <a>1</a>
+      <a>2</a>
     </div>
   </body>
 </html>
