--- a/practice.html
+++ b/practice.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <h1>NAV MENU</h1>
+
+    <nav class="top-nav">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Courses</a>
+      <a href="#">People</a>
+      <a href="#">Contact</a>
+    </nav>
   </body>
 </html>
