--- a/practice.html
+++ b/practice.html
@@ -14,7 +14,7 @@
       <a href="#">About</a>
       <a href="#">Courses</a>
       <a href="#">People</a>
-      <a href="#">Contact</a>
+      <a href="contact.html" target="_blank">Contact</a>
     </nav>
   </body>
 </html>
